2009-09-25  Ankit Jain  <jankit@novell.com>

	* Project.cs (DoLoad): If a VS2003 project is detected, then throw
	InvalidProjectFileException with useful error.

2009-09-24  Ankit Jain  <jankit@novell.com>

	* Project.cs (Load): Emit the .sln.proj file only if env var
	XBUILD_EMIT_SOLUTION is set.

2009-09-24  Ankit Jain  <jankit@novell.com>

	* Project.cs (GetKeyForTarget): Make target name, case insensitive.

2009-09-24  Ankit Jain  <jankit@novell.com>

	* Project.cs (InitializeProperties): Set 'MSBuildProjectDefaultTargets'
	reserved property.

2009-09-10  Ankit Jain  <jankit@novell.com>

	* BuildItem.cs (Evaluate): Metadata from "Include" should be,
	preserved, so use ConvertTo ITaskItem, rather than string.
	Ensure that the new items have the metadata from references _in_
	Include, and the metadata of _this_ builditem.
	* DirectoryScanner.cs (Includes): Change to a array of ITaskItem.
	(MatchedFilenames): Rename to ..
	(MatchedItems): .. this, and change type of array of ITaskItem.
	Ensure that metadata of items in Includes are retained in the
	final matched items.

	* BuildItemGroup.cs (ConvertoToITaskItemArray): Add 'separator'
	param. If separator is present, then just return a "Join'ed"
	string as the single task item.
	* ItemReference.cs: Track api changes.

	* BuildProperty.cs (ConvertToITaskItemArray): Split the value,
	as we need separate task items.

2009-09-01  Ankit Jain  <jankit@novell.com>

	Fix bug #534965.
	* Project.cs (BuildTarget): Move caching of target outputs to ..
	* Target.cs: .. here. Move LogTargetSkipped also here.
	Ensure that caching happens for target dependencies also.

2009-09-01  Ankit Jain  <jankit@novell.com>

	* DirectoryScanner.cs (Scan): Ignore empty entries in includes and
	excludes.

2009-09-01  Ankit Jain  <jankit@novell.com>

	* Expression.cs (ParseOptions): New enum. Replace the bool params
	of exression.Parse with this. Add option to control expansion of
	metadata references.