@@ -1,5 +1,14 @@
 2009-09-25  Ankit Jain  <jankit@novell.com>
 
+	* Makefile(EXTRA_DISTFILES): Add Microsoft.WebApplication.targets
+
+2009-09-25  Ankit Jain  <jankit@novell.com>
+
+	* xbuild/Microsoft.Common.targets: Emit list of files written
+	during the build, even if the build fails.
+
+2009-09-25  Ankit Jain  <jankit@novell.com>
+
 	Fix bug #534992.
 	* xbuild/Microsoft.Common.targets: Add support for copying
 	app.config to AssemblyName.config
